qatrack/qa/static/css/qa.css
.hand-cursor{
   cursor: hand; cursor: pointer;
}
.navbar .nav > li > a{
    color:white;
}
.navbar .nav > li > a:hover{
    color:#08c;
}
.navbar .nav li.dropdown .caret{
    border-top-color:white;
    border-bottom-color:white;
}

.navbar b.caret{
    border-top: 7px solid black;
    border-right:5px solid transparent;
    border-left:5px solid transparent;
    opacity:1;
    filter: alpha(opacity=100)
}

/*dropdown on hover rather than click */
ul.nav li.dropdown:hover ul.dropdown-menu{
    display: block;
}
.navbar .dropdown-menu {
 margin-top: 0px;
}

.pagination {
    margin:0;
    margin-bottom:2px;
}

.test-collection-table th,
.test-collection-table td{
    text-align:center;
}

/************************************************/
/* performing qa                                */
#overall-qa-status{
    min-height:0px;
}
.do-not-treat,
#contacts{
    display:none;
    min-height:0px;
}
#contacts dt{
    width:inherit;
    *width:250px;
}
#contacts dd{
    margin-left:300px;
}
#float-right-container{
    text-align:right;
}
#contact-container {
    padding: 2px 14px 2px 14px;
    margin-bottom:3px;
    min-height:14px;
    display: inline-block;
    zoom: 1;
    min-width: 1px;
    *width:400px;/* ie only */

}

#contact-container hr{
    margin: 1px;
}

tr.qa-comment {
    height:50px;
    display:none;
}
tr.qa-procedure {
    display:none;
}
tr.qa-comment td, tr.qa-procedure td {
    text-align:left;
}
tr.qa-procedure td table{
    width:100%;
}
tr.qa-comment td textarea{
    width:90%;
}
.qa-procedure-text pre {
    *width:900px;
}
#toggle-gen-comment {
    margin-bottom:10px;
}
.qa-tli-comment textarea {
    width:400px;
    margin-bottom:10px;
    display:none;
}

.qa-showcmt{
    width: 80px;
    overflow:hidden;
}
.qa-status{
    width:70px;
    overflow-x:hidden;
}
.qa-skip {
    width:40px;
}
.qa-reference {
    width:70px;
}
input.qa-input,
select.qa-input{
    width:85px;
    text-align:right;
    height:16px;
    padding:1px 4px;
    margin-bottom:0px;
}
select.qa-input{
    height:20px;
}


input[disabled].qa-input, input[readonly].qa-input {
    background-color: #EEB;
    font-weight:550;
}

input[type=radio].qa-input{
    width:15px;
    text-align:right;
    height:12px;
    font-size:0.9em;
    margin-bottom:3px;
}

.qa-table [class*="span"] {
    min-height:18px;
}
.qa-table label{
    margin:0px;
}
.qa-table  tr:hover th {
  background-color: inherit;
}

.qa-table td {
    font-size:0.9em;
    /*padding-bottom:2px;*/
    padding:1px;

}
.qa-table td, .qa-table th{
    text-align:center;
}
.qa-table td.qa-value,
.qa-table th.qa-value{
    width:100px;
    text-align:center;
}
.qa-category{
    width:180px;
    min-width: 180px;
}
th.qa-category div{
/* hack to fix IE7 min-width*/
    width:180px;
    height:1px;
}

.qa-name {
    width:300px;
    text-align:left;
}
th.qa-name div{
/* hack to fix IE7 min-width*/
    width:300px;
    height:1px;
}

#qa-form div.well{
    padding:4px;
    padding-bottom:0px;
    margin-bottom:0px;
}
.qa-history{
    min-width:250px;
}
th.qa-history div{
/* hack to fix IE7 min-width*/
    width:220px;
    height:1px;
}

.history-value,.history-label {
    display:inline-block;
    width: 42px;
    text-align:right;
    margin-right: 1px; /*fix ie inline block bug*/
}

.history-label {
    font-size:0.8em;
    font-weight:400;
    background-color:white;
    color:black;

}

#admin_controls div {
    margin-right:4px;
}

#admin_controls div label{
    float: left;
    text-align: right;
}

#admin_controls div.date label{
    width:100px;
}
#admin_controls .input-prepend.date .add-on i {
    display:inline;
}
#admin_controls div.date input{
    width:100px;
}


.inline-block {
    display:inline-block;
}

.control-label-small{
    width:50px;
    float: left;
    padding-top: 5px;
    text-align: right;
}

/**************************************************/
/*QA Status Spans                                 */
.no_tol, .not_done {
    background-color:#3a87ad;
}
.ok {
    background-color:#468847;
}
.action {
    background-color:#b94a48;
}
.tolerance {
    background-color: #f89406;
}

/*********************************************/
/* QA review & approval                      */


.review-buttons {
    padding-bottom: 8px;
    padding-top:8px;
}
.review-buttons hr{
    margin-top:1px;
}
.review-test-list td select{
    text-align:right;
    height:22px;
    padding:1px 4px;
    margin-bottom:0px;
}

td.review-value,
th.review-value {
    width:60px;
    text-align:center;
}

td.review-ref,
th.review-ref {
    width:60px;
    text-align:center;
}

td.review-selected,
th.review-selected{
    width:40px;
    text-align:center;
}

td.review-status,
th.review-status{
    width:185px;
}


#qa-test-list-table,
#qa-test-review-table{
    margin: 1em 0;
    clear: both;
}
#qa-test-list-table thead select,
#qa-test-list-table input,
#qa-test-review-table select,
#qa-test-review-table input{
    width:80px;
}
.show-hide{
    cursor: hand; cursor: pointer;
}
.sub-table-container {
    background-color:#D9EDF7;
}
.sub-table {
    font-size:0.9em;
    background-color: #F9F9F9;
}
.sub-table th{
    font-weight: normal;
    font-style:italic;
}
.sub-table th, .sub-table td {
    text-align:center;
}
.sub-table th.name-col{
    min-width:250px;
}
.cat-col{min-width:150px;}
.comment-col {width:120px;}
.history-col,  .review-col, .review-url-col{
    width:100px;
}
.ref-col, .value-col {
    width:70px;
    text-align:right;
}

option.unreviewed {
    background-color:#D9EDF7;
}
/* css for timepicker */
.ui-timepicker-div .ui-widget-header { margin-bottom: 8px; }
.ui-timepicker-div dl { text-align: left; }
.ui-timepicker-div dl dt { height: 25px; margin-bottom: -25px; }
.ui-timepicker-div dl dd { margin: 0 10px 10px 65px; }
.ui-timepicker-div td { font-size: 90%; }
.ui-tpicker-grid-label { background: none; border: none; margin: 0; padding: 0; }


.row-spacer {
    margin-top: 15px;
}
.header-spacer {
    margin-bottom:5px;
}

/* overall qa status */

.due-status-container {
    margin-right:20px;
}
.due-status-lists {
    overflow-y:auto;
    max-height:180px;
}
.due-status-container hr{
    margin:2px 0;
}



/* overviewtrack view */
.overview-freq-container{
    float: left;
    padding:5px;
    padding-bottom:3px;
    margin-bottom:3px;
}
.overview-utc-container {
    float: left;
    padding-bottom:3px;
    width:100%;
}
.overview-unit-container .alert{
    margin-top: 15px;
    margin-bottom:5px;
    padding:0;
    padding-left:5px;


}
h3.overview-unit-title{
    background-color: #3A87AD;
}
.overview-unit-container hr {
    margin: 3px 0;
}
.overview-unit-container h3 {
    line-height:24px;
}

.overview-test-list-name{
    float:left;
    min-height:1px;
}

.overview-test-list-date{
    text-align:right;
    width:85px;
    min-height:1px;
}
.overview-test-list-pass-fail{
    text-align:right;
    width:125px;
    min-height:1px;
}

/* data tables */
.dataTables_processing {
  padding: 2px 2px 2px 2px;
  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);

  border: 1px solid #bce8f1;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;

  background-color: #d9edf7;
  color: #3a87ad;

  width: 80px;

}

#pagination-placeholder {
    min-height:50px;
}

